--- a/Exercise-2-problem-1.ipynb
+++ b/Exercise-2-problem-1.ipynb
@@ -25,7 +25,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3871/3672688487.py:2: UserWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas will still use PyGEOS by default for now. To force to use and test Shapely 2.0, you have to set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
+      "/tmp/ipykernel_4442/3672688487.py:2: UserWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas will still use PyGEOS by default for now. To force to use and test Shapely 2.0, you have to set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
       "\n",
       "import os\n",
       "os.environ['USE_PYGEOS'] = '0'\n",
@@ -303,11 +303,11 @@
    "outputs": [],
    "source": [
     "# ADD YOUR OWN CODE HERE\n",
-    "# Create a output path for the data\n",
+    "# Create a output path for the data//\n",
     "output_fp = \"data/mysterious-polygon.gpkg\"\n",
     "\n",
     "# Write the file\n",
-    "geo.to_file(output_fp)"
+    "geo.to_file(output_fp) "
    ]
   },
   {
